@@ -52,11 +52,8 @@
  	    Gnopernicus development, and is also the principal author and
  	    project maintainer.  BAUM has been developing screen reading and
  	    magnification software, as well as other software and hardware
- 	    products for the blind, for over 20 years.  The  company's current
- 	    products include the POET reading machine, the Vario  40, Vario 80,
- 	    and DM 80 plus Braille displays, the Galileo screen  magnifier for
- 	    Windows NT, the Virgo screen reader for Windows &amp; Windows  NT, and
- 	    the Visio low-vision workstation. More information about Gnopernicus
+ 	    products for the blind, for over 20 years. More information about
+ 	    Gnopernicus
  	    can be found at<ulink
 	url="http://developer.gnome.org/projects/gap/AT/Gnopernicus">http://developer.gnome.org/projects/gap/AT/Gnopernicus</ulink>.
     </para>
